# ufu-est-aplicada

./: README.md  modelos_de_sobrevivencia.ipynb  pyproject.toml
