[project]
name = "est-aplicada"
version = "0.1.0"
description = "Projeto da disciplina de Estatistica Aplicada"
authors = [
    {name = "joaomm"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
